devops-app/devops-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app
  namespace: preprod
  labels:
    app: devops-app

spec:
  replicas: 3
  selector:
    matchLabels:
      app: devops-app

  template:
    metadata:
      labels:
        app: devops-app

    spec:
      containers:
      - name: devops-app
        image: vedant7669/devops-app:1.0
        ports:
        - containerPort: 80
