devops-app/devops-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-app
  namespace: preprod
spec:
  selector:
   app: devops-app
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80
  type: ClusterIP
